@@ -1,3 +1,5 @@
+########### 2015-10-24########### 2015-10-20 ################# #################
+alter table shop_items_product add column offshelf_time datetime DEFAULT NULL;
 ########### 2015-10-20 #################
 alter table supplychain_hot_product add column proid int(11) default 0;
 ########### 2015-10-19 #################
